--- a/project/website/templates/base.html
+++ b/project/website/templates/base.html
@@ -16,11 +16,19 @@
     />
 
     <title>{% block title %}Home{% endblock %}</title>
-    <style>.btn-primary {
-      color: #fff;
-      background-color: #ff1e00;
-      border-color: #01080f;
-  }</style>
+    <style>
+      .alert-success {
+    color: #155724;
+    background-color: #68c77f;
+    border-color: #85eb9c;
+}
+.bg-dark {
+    background-color: #000000!important;
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: #f8f9fa;
+}
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
