--- a/project/website/templates/base.html
+++ b/project/website/templates/base.html
@@ -28,10 +28,31 @@
 .navbar-dark .navbar-nav .nav-link {
     color: #f8f9fa;
 }
+
+
+.button {
+  border: none;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 35px;
+  cursor: pointer;
+  float: right;
+}
+
+.button1 {background-color: 	#2965f1;}
+
     </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+      <a href="/">
+      <span class="button button1"><ion-icon name="layers-outline"></ion-icon></span>
+    </a>
       <button
         class="navbar-toggler"
         type="button"
