--- a/project/website/templates/login.html
+++ b/project/website/templates/login.html
@@ -25,4 +25,9 @@
   <br />
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
+  <!--Start Footer-->
+  <div class="footer-copyright text-center py-3">© 2022 Copyright:
+    <a href="https://github.com/RamiHadji/CS50-Final-Project">RamiHadji</a>
+  </div>
+  <!--End Footer-->
 {% endblock %}
