--- a/project/website/templates/sign_up.html
+++ b/project/website/templates/sign_up.html
@@ -45,4 +45,9 @@ content %}
   <br />
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+  <!--Start Footer-->
+  <div class="footer-copyright text-center py-3">© 2022 Copyright:
+    <a href="https://github.com/RamiHadji/CS50-Final-Project">RamiHadji</a>
+  </div>
+  <!--End Footer-->
 {% endblock %}
