--- a/project/website/templates/base.html
+++ b/project/website/templates/base.html
@@ -19,7 +19,7 @@
     <style>
       .alert-success {
     color: #155724;
-    background-color: #68c77f;
+    background-color: #bcf1ba;
     border-color: #85eb9c;
 }
 .bg-dark {
@@ -42,6 +42,16 @@
 }
 
 .button1 {background-color: 	#2965f1;}
+
+footer{
+  background-color: #0c0b0b;
+  color: #030303;
+  width: auto;
+  color: white;
+  padding: 1px;
+  height: 10%;
+  margin-top: 85px;
+}
 
     </style>
   </head>
