--- a/project/website/templates/sign_up.html
+++ b/project/website/templates/sign_up.html
@@ -45,12 +45,12 @@
     <br />
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
-  <form>
-     <!--Start Footer-->
+   <!--Start Footer-->
+   <footer>
   <div class="footer-copyright text-center py-3">© 2022 Copyright:
     <a href="https://github.com/RamiHadji/CS50-Final-Project">RamiHadji</a>
   </div>
+</footer>
   <!--End Footer-->
-  </form>
   {% endblock %}
   
