--- a/project/website/templates/base.html
+++ b/project/website/templates/base.html
@@ -16,23 +16,11 @@
     />
 
     <title>{% block title %}Home{% endblock %}</title>
+    <link rel="stylesheet" href="./style.css"/>
     <style>
-      .alert-success {
-    color: #155724;
-    background-color: #bcf1ba;
-    border-color: #85eb9c;
-}
-.bg-dark {
-    background-color: #000000!important;
-}
-.navbar-dark .navbar-nav .nav-link {
-    color: #f8f9fa;
-}
-
-
 .button {
   border: none;
-  color: rgb(255, 255, 255);
+  color:rgb(255, 255, 255);
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -41,19 +29,19 @@
   float: right;
 }
 
-.button1 {background-color: 	#2965f1;}
-
 footer{
-  background-color: #0c0b0b;
-  color: #030303;
-  width: auto;
-  color: white;
-  padding: 1px;
-  height: 10%;
-  margin-top: 85px;
+ background-color:#0c0b0b;
+ color: #030303;
+ width: auto;
+ color: white;
+ padding: 1px;
+ height: 10%;
+ margin-top: 90px;
 }
+.button1 {background-color:#1c299c;}
 
     </style>
+  
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
