--- a/project/website/templates/home.html
+++ b/project/website/templates/home.html
@@ -3,8 +3,11 @@
   <h1 align="center">Notes</h1>
   <ul class="list-group list-group-flush" id="notes">
     {% for note in user.notes %}
-    <li class="list-group-item">
-      {{ note.data }}
+    <li class="list-group-item" >
+    <div style=" display:flex; justify-content: space-between">
+     <div>{{ note.data }}</div>
+      <div>{{ note.date.strftime('%Y-%m-%d') }}</div>
+    </div>
       <button type="button" class="close" onClick="deleteNote({{ note.id }})">
         <span aria-hidden="true">&times;</span>
       </button>
