--- a/project/website/templates/base.html
+++ b/project/website/templates/base.html
@@ -3,45 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!-- Bootstrap JS -->
+  
+  <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+  crossorigin="anonymous"
+/>
+  <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    crossorigin="anonymous"
+  />
+<!-- CSS  -->
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mainpage.css') }}">
+<!-- END CSS  -->
 
     <title>{% block title %}Home{% endblock %}</title>
-    <link rel="stylesheet" href="./style.css"/>
-    <style>
-.button {
-  border: none;
-  color:rgb(255, 255, 255);
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 35px;
-  cursor: pointer;
-  float: right;
-}
-
-footer{
- background-color:#0c0b0b;
- color: #030303;
- width: auto;
- color: white;
- padding: 1px;
- height: 10%;
- margin-top: 90px;
-}
-.button1 {background-color:#1c299c;}
-
-    </style>
-  
+  <!--- -->
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
